# nucleus-fire

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  RELEASE_NOTES_BETA.md  benchmark.sh  curl_output.txt  debug_compression.sh  package.json  render.yaml  shootout.sh
benchmarks/nucleus/: Cargo.toml  content.deck
benchmarks/nucleus/src/views/: home.ncl
crates/atom/: Cargo.toml
crates/atom/src/: error_overlay.html  hot_swap.rs  lib.rs  memory.rs  runtime.rs  tests.rs
crates/atom/src/middleware/: ai_assist.rs  fortress.rs  mod.rs  profiler.rs
crates/atom/tests/: integration_tests.rs
crates/ncc/: Cargo.toml
crates/ncc/fuzz/: Cargo.toml
crates/ncc/fuzz/fuzz_targets/: fuzz_parser.rs
crates/ncc/src/: ast.rs  codegen.rs  css.rs  dax.rs  db.rs  diagnostics.rs  errors.rs  guardian.rs  kitchen_sink_test.rs  lib.rs  nir.rs  parser.rs  parser_edge_tests.rs  rosetta.rs  spec_compliance_test.rs  tests_action.rs
crates/nucleus-cli/: Cargo.toml
crates/nucleus-cli/src/: animations.rs  console.rs  deploy.rs  export.rs  generate.rs  lib.rs  main.rs  pwa.rs  studio.rs  studio_ui.html
crates/nucleus-cli/tests/: enterprise_tests.rs  scaffold_tests.rs
crates/nucleus-macros/: Cargo.toml
crates/nucleus-macros/src/: lib.rs
crates/nucleus-std/: Cargo.toml  README.md  benchmark_config_placeholder.toml
crates/nucleus-std/benches/: core_bench.rs
crates/nucleus-std/src/: agent.rs  beacon.rs  browser.rs  cache.rs  chain.rs  config.rs  devtools.rs  edge_tests.rs  errors.rs  federation.rs  forms.rs  fortress.rs  gondola.rs  graph.rs  health.rs  lens.rs  lib.rs  logging.rs  mcp.rs  middleware.rs  neural.rs  neutron.rs  neutron_store_tests.rs  oauth.rs  payments.rs  polyglot.rs  pool_monitor.rs  postman.rs  pulse.rs  push.rs  redis_cache.rs  rpc.rs  scheduler.rs  scout.rs  session.rs  sonar.rs  stream.rs  tenant.rs  testing.rs  upload.rs  (+2 more)
crates/nucleus-std/src/photon/: db.rs  migrations.rs  mod.rs  query.rs  query.rs.bak  relations.rs
examples/apps/chat/: Cargo.toml
examples/apps/chat/src/: main.rs
examples/apps/chat/src/services/: websocket.rs
examples/apps/chat/src/views/: index.ncl
examples/apps/chat/tests/: integration.rs
examples/apps/dating/: Cargo.toml  README.md  package-lock.json  package.json
examples/apps/dating/src/logic/: matching.rs
examples/apps/dating/static/: service-worker.js
examples/apps/dating/static/css/: main.css
examples/apps/demo-app/: Cargo.toml
examples/apps/demo-app/src/: main.rs
examples/apps/demo-app/src/assets/: styles.css
examples/apps/demo-app/src/logic/: mod.rs  source.rs
examples/apps/demo-app/src/views/: chain.ncl  payments.ncl
examples/apps/music/: Cargo.toml  README.md  package-lock.json  seed_data.sql
examples/apps/music/migrations/: 20250101_initial_schema.sql
examples/apps/music/src/: lib.rs  main.rs  tests.rs
examples/apps/music/src/logic/: metadata.rs  mod.rs  scanner.rs
examples/apps/music/src/models/: mod.rs  video.rs
examples/apps/music/src/services/: api.rs
examples/apps/music/src/views/: index.ncl
examples/apps/music/static/: sitemap.xml
examples/apps/music/static/css/: style-519a4e2423c2bd48.css
examples/apps/music/static/js/: index-ce6c66ed5734cb9d.js  script-f9f74d930f99c12e.js
examples/apps/shop/: Cargo.toml
examples/apps/shop/src/: main.rs  store.rs
examples/apps/shop/src/models/: store.rs
examples/apps/shop/src/views/: index.ncl
projects/site/: Cargo.toml  Dockerfile  Makefile  fly.toml  nucleus.config  package-lock.json  package.json  render.yaml  site.db  tailwind.config.js
projects/site/migrations/: 20251227000000_create_subscribers.sql  20260104000000_create_email_templates.sql  20260104000100_seed_email_templates.sql
projects/site/models/: mod.rs  subscriber.rs
projects/site/src/: app_generated.rs  lib.rs  main.rs
projects/site/src/assets/: styles.css
projects/site/src/components/: Badge.ncl  Button.ncl  Card.ncl  Checkbox.ncl  CodeBlock.ncl  DataTable.ncl  FeatureCard.ncl  FormGroup.ncl  Modal.ncl  RaceLane.ncl  Select.ncl  SplitPane.ncl  StatCard.ncl  TextInput.ncl  Toast.ncl
projects/site/src/controllers/: newsletter.rs
projects/site/src/layouts/: main.ncl
projects/site/src/services/: db.rs  mod.rs  newsletter.rs
projects/site/src/views/: admin.ncl  clean_layout.ncl  components.ncl  docs.ncl  index.ncl  layout.ncl  playground.ncl
projects/site/static/: manifest.json  sitemap.xml
projects/site/static/assets/: accessibility.css  docs.css  docs.js  hero.js  home.js  neutron-store.js  output.css  playground.css  playground.js  playground_extra.css  playground_sidebar.css  router.js  styles.css
projects/site/static/css/: style-18f37c3851472eed.css  style-2ad7447bbf6c5a9e.css  style-320c818d6afca7c8.css  style-57458f0b28585c3.css  style-82010526467a39f8.css  style-9579750cad8c2885.css  style-97ae67ce10880645.css  style-c9845a64716d9a22.css  style-cf3042b41881c9e3.css  style-df567e4a38c15e83.css
projects/site/static/docs/: 20_database_guide.md  manifest.json
projects/site/static/js/: router.js  script-195aee69d0a4a85.js  script-1d3cd626682035f9.js  script-58f12013047fe218.js  script-71784045e35c5a0c.js  script-78dd800172958cda.js  script-7f6306cd2524da2a.js  script-a10000d77a34677a.js  script-b7024682217845e.js  script-c00d33fae6276b44.js  script-c01306d6f7df6de4.js  script-c5915d98c785ecff.js  script-c5cc7b323e8237e8.js  script-ebe5107d2aed13ab.js  script-f207b00990240ce7.js  script-f343e4970aa606d6.js  script-f4bcc0d8d48b4d6d.js
projects/site/tests/: playground.test.js
templates/apps/blog/: Cargo.toml  Dockerfile  README.md  fly.toml  input.css  package-lock.json  package.json  tailwind.config.js
templates/apps/blog/content/: hello.md
templates/apps/blog/src/: main.rs
templates/apps/blog/static/: styles.css
templates/apps/blog/tests/: integration.rs
templates/integrations/neutron-demo/: Cargo.toml
templates/integrations/neutron-demo/src/: main.rs
templates/integrations/neutron-demo/static/: style.css
test_project/: Cargo.toml  README.md  content.deck  nucleus.config
test_project/src/views/: index.ncl  layout.ncl
(+367 files in other folders)
