[workspace]
members = [
    "crates/nucleus-std",
    "crates/nucleus-cli",
    "crates/atom",
    "crates/ncc",
    "crates/nucleus-lsp",
    "crates/nucleus-macros",
    "benchmarks/nucleus",
    "benchmarks/competitors/actix",
    "benchmarks/competitors/axum",
    "templates/integrations/neutron-demo",
    "templates/integrations/tailwind-integration",
    "templates/apps/dashboard",
    "templates/apps/shop",
    "templates/apps/chat",
    "templates/apps/music",
    "templates/apps/demo-app",
    "templates/apps/dating",
    "templates/recipes",
    "templates/apps/showcase",
    "templates/apps/saas",
    "templates/apps/blog",
    "projects/site",
]
resolver = "2"


[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
