[package]
name = "test_project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
simd-json = "0.13"
mimalloc = "0.1"
tower-http = { version = "0.5", features = ["fs", "trace", "compression-full"] }
nucleus-std = { path = "../crates/nucleus-std" } # dev path
atom = { path = "../crates/atom" } # dev path
