[package]
name = "ncc"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nucleus-fire/nucleus-fire"

[dependencies]
nom = "7.1"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
sha2 = "0.9"
hex = "0.4"
serde_json = "1.0"
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0"
md5 = "0.8.0"

[lib]
path = "src/lib.rs"
