[package]
name = "nucleus-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nucleus-fire/nucleus-fire"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ncc = { path = "../ncc" }
atom = { path = "../atom" }
tokio = { version = "1", features = ["full"] }
miette = { version = "5.10", features = ["fancy"] }
nucleus-std = { path = "../nucleus-std", features = ["browser", "mail"] }
chrono = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
image = "0.25.9"
rayon = "1.11.0"
walkdir = "2.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
mimalloc = "0.1.48"
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }

# Visual CLI enhancements
indicatif = "0.17"
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
notify-rust = "4"

# REPL support
rustyline = "14"
comfy-table = "7"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }

# Database Studio
axum = "0.7"

[lib]
name = "nucleus_cli"
path = "src/lib.rs"

[[bin]]
name = "nucleus"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
