[package]
name = "nucleus-macros"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/nucleus-fire/nucleus-fire"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }

