[package]
name = "site"
version = "0.1.0"
edition = "2021"

# ═══════════════════════════════════════════════════════════════
# WASM-ONLY DEPENDENCIES (for client hydration)
# ═══════════════════════════════════════════════════════════════
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "Storage"] }
console_error_panic_hook = "0.1"

# ═══════════════════════════════════════════════════════════════
# SERVER-ONLY DEPENDENCIES (native binary)
# ═══════════════════════════════════════════════════════════════
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nucleus-std = { path = "../../crates/nucleus-std" }
atom = { path = "../../crates/atom" }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["compression-full", "fs", "trace", "set-header"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
csv = "1.3"
mrml = "5.1.0"
mimalloc = "0.1"
regex = "1"
base64 = "0.21"

# ═══════════════════════════════════════════════════════════════
# SHARED DEPENDENCIES (both targets)
# ═══════════════════════════════════════════════════════════════
[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }

[lib]
crate-type = ["cdylib", "rlib"]
