[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
atom = { path = "../../../crates/atom" }
nucleus-std = { path = "../../../crates/nucleus-std" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.89"
serde_json = "1.0.149"
