[package]
name = "dating"
version = "0.1.0"
edition = "2021"

[dependencies]
atom = { path = "../../../crates/atom" }
ncc = { path = "../../../crates/ncc" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mimalloc = { version = "0.1", default-features = false }
nucleus-std = { path = "../../../crates/nucleus-std" }
