[package]
name = "demo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
nucleus-std = { path = "../../../crates/nucleus-std" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
mimalloc = "0.1.48"
