[package]
name = "shop"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
atom = { path = "../../../crates/atom", features = ["hot-reload"] }
nucleus-std = { path = "../../../crates/nucleus-std" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
